--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,23 +15,22 @@
   -->
 
 <resources>
-
   <color name="colorAccent">#D81B60</color>
-  <color name="lineDivider">@color/g800</color>
+  <color name="lineDivider">@color/n800</color>
 
   <!-- Text -->
-  <color name="textColorPrimary">@color/g900</color>
-  <color name="textColorSecondary">@color/g800</color>
-  <color name="textColorTertiary">@color/g700</color>
+  <color name="textColorPrimary">@color/n900</color>
+  <color name="textColorSecondary">@color/n800</color>
+  <color name="textColorTertiary">@color/n700</color>
 
   <!-- Toolbar -->
-  <color name="statusBarColor">@color/g1100</color>
-  <color name="toolbarBackground">@color/g900</color>
-  <color name="windowBackground">@color/g0</color>
-  <color name="dividerColor">@color/g300</color>
-  <color name="navigationBarColor">@color/g1100</color>
+  <color name="statusBarColor">@color/n1100</color>
+  <color name="toolbarBackground">@color/n900</color>
+  <color name="windowBackground">@color/n0</color>
+  <color name="dividerColor">@color/n300</color>
+  <color name="navigationBarColor">@color/n1100</color>
 
-  <color name="toolbarTitleTextColor">@color/g0</color>
-  <color name="toolbarSubtitleTextColor">@color/g50</color>
+  <color name="toolbarTitleTextColor">@color/n0</color>
+  <color name="toolbarSubtitleTextColor">@color/n50</color>
 
 </resources>
