--- a/app/src/main/res/layout/row_noticia.xml
+++ b/app/src/main/res/layout/row_noticia.xml
@@ -20,6 +20,15 @@
   android:layout_height="wrap_content"
   android:orientation="vertical">
 
+  <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    fresco:roundedCornerRadius="5dp"
+    android:id="@+id/sdv_foto"
+    android:paddingTop="2dp"
+    android:paddingStart="2dp"
+    android:paddingEnd="4dp"
+    android:layout_width="80dp"
+    android:layout_height="80dp" />
+
   <TextView
     android:id="@+id/tv_titulo"
     android:textStyle="bold"
