feat(popup-style): add pop up code for implement the image to each article

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,4 +33,6 @@
   <color name="toolbarTitleTextColor">@color/d0</color>
   <color name="toolbarSubtitleTextColor">@color/d50</color>
 
+  <color name="dimmed">#E9000000</color>
+
 </resources>
