style(toolbar): fix toolbar enlarge and add icon of app

--- a/app/src/main/res/layout/popup_image.xml
+++ b/app/src/main/res/layout/popup_image.xml
@@ -20,8 +20,8 @@
   android:id="@+id/pdv_foto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  app:failureImage="@drawable/world"
+  app:failureImage="@drawable/newsicon"
   app:failureImageScaleType="centerInside"
-  app:placeholderImage="@drawable/world"
+  app:placeholderImage="@drawable/newsicon"
   app:placeholderImageScaleType="fitCenter" />
 
