--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Charlie Condorcet
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -22,18 +21,38 @@
   android:orientation="vertical"
   tools:context=".activities.MainActivity">
 
-  <androidx.appcompat.widget.Toolbar
-    android:id="@+id/toolbar"
+  <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:elevation="4dp"
-    android:minHeight="?attr/actionBarSize"
-    android:theme="@style/Toolbar"
-    app:contentInsetStart="0dp"
-    app:contentInsetStartWithNavigation="0dp"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:subtitle="@string/subtitle"
-    app:title="@string/title" />
+    android:layout_height="70dp"
+    android:orientation="horizontal">
+
+
+    <ImageView
+      android:id="@+id/imageView"
+      android:layout_width="70dp"
+      android:layout_height="70dp"
+      android:contentDescription="@string/title"
+      android:theme="@style/Toolbar"
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+      app:srcCompat="@drawable/newsicon" />
+
+    <androidx.appcompat.widget.Toolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="70dp"
+      android:elevation="4dp"
+      android:minHeight="?attr/actionBarSize"
+      android:theme="@style/Toolbar"
+      app:contentInsetStart="0dp"
+      app:contentInsetStartWithNavigation="0dp"
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+      app:subtitle="@string/subtitle"
+      app:title="@string/title" />
+
+
+  </LinearLayout>
+
+
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:id="@+id/swl_refresh"
     android:layout_width="match_parent"
