--- a/app/src/main/res/layout/row_noticia.xml
+++ b/app/src/main/res/layout/row_noticia.xml
@@ -15,55 +15,92 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:fresco="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical">
 
-  <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    fresco:roundedCornerRadius="5dp"
-    android:id="@+id/sdv_foto"
-    android:paddingTop="2dp"
-    android:paddingStart="2dp"
-    android:paddingEnd="4dp"
-    android:layout_width="80dp"
-    android:layout_height="80dp" />
-
-  <TextView
-    android:id="@+id/tv_titulo"
-    android:textStyle="bold"
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@style/TextLarge"
-    tools:text="@tools:sample/lorem" />
+    android:orientation="horizontal">
 
-  <TextView
-    android:id="@+id/tv_resumen"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAppearance="@style/TextMedium"
-    tools:text="@tools:sample/lorem" />
+    <com.facebook.drawee.view.SimpleDraweeView
+      android:id="@+id/sdv_foto"
+      android:layout_width="90dp"
+      android:layout_height="match_parent"
+      android:paddingTop="2dp"
+      android:paddingStart="2dp"
+      android:paddingEnd="4dp"
+      fresco:roundedCornerRadius="5dp" />
 
-  <TextView
-    android:id="@+id/tv_autor"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAppearance="@style/TextSmall"
-    tools:text="@tools:sample/full_names" />
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
 
-  <TextView
-    android:id="@+id/tv_fuente"
-    android:textStyle="bold"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAppearance="@style/TextSmall"
-    tools:text="@tools:sample/cities" />
 
-  <TextView
-    android:id="@+id/tv_fecha"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAppearance="@style/TextSmall"
-    tools:text="@tools:sample/date/ddmmyy" />
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+          android:id="@+id/tv_autor"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="0.1"
+          android:textAppearance="@style/TextSmall"
+          tools:text="@tools:sample/full_names" />
+
+        <TextView
+          android:id="@+id/tv_sup_arroba"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="0.1"
+          android:text="@string/arroba" />
+        <TextView
+          android:id="@+id/tv_fuente"
+          android:textStyle="bold"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:textAppearance="@style/TextSmall"
+          tools:text="@tools:sample/cities" />
+
+        <TextView
+          android:id="@+id/tv_fecha"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="3"
+          android:textAlignment="textEnd"
+          android:textAppearance="@style/TextSmall"
+          tools:text="@tools:sample/date/ddmmyy" />
+      </LinearLayout>
+
+      <TextView
+        android:id="@+id/tv_titulo"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextLarge"
+        tools:text="@tools:sample/lorem" />
+
+      <TextView
+        android:id="@+id/tv_resumen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextMedium"
+        tools:text="@tools:sample/lorem" />
+
+    </LinearLayout>
+
+  </LinearLayout>
+
+
+
+
+
 
 </LinearLayout>
